crates/tests/src/snapshots/fe_compiler_tests__compile_errors__call_create_with_wrong_type.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: function `create` expects numeric parameter
  ┌─ compile_errors/call_create_with_wrong_type.fe:7:19
  │
7 │         Bar.create(true)
  │                   ^^^^^^ invalid argument


